--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/katesheleh/http-server/issues"
   },
-  "homepage": "https://github.com/katesheleh/http-server#readme"
+  "homepage": "https://github.com/katesheleh/http-server#readme",
+  "dependencies": {
+    "express": "^4.17.2"
+  }
 }
